@@ -1,3 +1,7 @@
+2022-06-04  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Remove feature "pic"
+
 2022-06-03  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Option "--with-libc" renamed to "--with-libc-all"
